// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ast getOutOfScopeLocations simple 1`] = `
Array [
  Object {
    "end": Object {
      "column": 21,
      "line": 1,
    },
    "start": Object {
      "column": 13,
      "line": 1,
    },
  },
]
`;

exports[`ast setSelection simple 1`] = `
Object {
  "expression": "this.bazz",
  "location": Object {
    "end": Object {
      "column": 37,
      "line": 1,
    },
    "start": Object {
      "column": 28,
      "line": 1,
    },
  },
  "result": undefined,
  "updating": false,
}
`;

exports[`ast setSymbols when the source is loaded should be able to set symbols 1`] = `
Object {
  "functions": Array [
    Object {
      "location": Object {
        "end": Object {
          "column": 21,
          "line": 1,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": "base",
      "parameterNames": Array [
        "boo",
      ],
    },
  ],
  "variables": Array [
    Object {
      "location": Object {
        "end": Object {
          "column": 17,
          "line": 1,
        },
        "identifierName": "boo",
        "start": Object {
          "column": 14,
          "line": 1,
        },
      },
      "name": "boo",
    },
  ],
}
`;
